overflow su issue section

--- a/src/components/planDetail/planDetail.less
+++ b/src/components/planDetail/planDetail.less
@@ -127,6 +127,7 @@
         padding: 1rem;
         border-bottom-left-radius: var(--border-radius);
         border-bottom-right-radius: var(--border-radius);
+        overflow-y: auto;
 
         .comments-section{
           height: 100%;
